modified name and job

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header>
         <h3>Short biography of</h3>
         <h1 id="title">
-          Gigla Shekiladze
+          Gigla
         </h1>
         <h3>My father</h3>
         
@@ -43,7 +43,7 @@
           <tr>
             <td><strong>1954-64</strong></td>
             <td>-</td>
-            <td>Studied 8 year in school of Gezruli, after which he finished study in #1 school of Chiatura city.</td>
+            <td>Has finished 8 year-school of village Gezruli, after which he finished study in 1st school of Chiatura city.</td>
           </tr>
           <tr>
             <td><strong>1968-72</strong></td>
@@ -53,7 +53,7 @@
           <tr>
             <td><strong>1972</strong></td>
             <td>-</td>
-            <td>Started job at #3 Motor Carrier Enterprise in Georgia as driver</td>
+            <td>Started job at #3 Motor Carrier Enterprise in Georgia</td>
           </tr>
           <tr>
             <td><strong>1972</strong></td>
@@ -100,12 +100,12 @@
         
       </section>
     </main>
-    <!-- 
-    ================================
-      CONTENT
-    ================================   
-    -->
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  </body>
+  <!-- 
+  ================================
+    CONTENT
+  ================================   
+  -->
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+</body>
 
 </html>
